* increased loot drops by a bunch in maps
* finishing quest no longer reduces lootdrops in map
* you are now encouraged to explore the map slowly, in fear of traps or dying from unseen mobs. Instead of running like a chicken and aoeing mobs to death.
* balance will be wack, except either too easy or too hard exploring. Will be ironed out.
* maps are no longer limited by time. The reason is simple, there are ZERO ongoing spawners. You can't farm anything. If you clear all the mobs, that's it.

* added recipe for increase map tier item in tinkering station
* most loot crate rewards now cant drop common rarity
* fix loot crates without nbt crashing game
* added divine shield cleric spell
* added poisoned weapons druid spell
* added synergies: blizzard, thunder dash, poisoned weapons
* added a whole new ranger skill tree with its own synergies!
* added new unique items
* disabled my workaround that allowed dimension deletition because it caused server crashes. But now dimensions won't be deleted until forge accepts a PR
* decreased item requirements a bit
* fix runewords
* only 1 unique rune per runed item is now allowed
* fix some heals not working
* reduced boss hp, increased xp and loot
* fixed shield textures
* trying out a new system to balance map drops. Bascically i don't want people spamming them all the time, but i don't want people spending hours insta killing overworld mobs for them either.
So i made a system that buffs drops if you're outside a map dimension, but nerfs them if you're inside. This should make maps a lot more precious and time gated, and allow for people to do
other minecraft things in the meantime.
* increased loot droprates in maps a bit.
* grouped all my commands under /slash
This should make using commands a lot easier
* added simple party system, untested. /slash party. For now it should disable friendly fire