@@ -84,6 +84,60 @@
 "_comment": " [CATEGORY]: MISC - NAMES",
 
 
+"_comment": " [CATEGORY]: ALCHEMY - NAMES",
+
+	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "§7Minor Energy Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_10": "§aLesser Energy Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_100": "§dMiraculous Energy Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_25": "§eMedium Energy Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_50": "§9Greater Energy Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_75": "§6Major Energy Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_1": "§7Minor Health Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_10": "§aLesser Health Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_100": "§dMiraculous Health Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_25": "§eMedium Health Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_50": "§9Greater Health Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_75": "§6Major Health Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_1": "§7Minor Loot Bonus Buff Potion ",
+	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_10": "§aLesser Loot Bonus Buff Potion ",
+	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_100": "§dMiraculous Loot Bonus Buff Potion ",
+	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_25": "§eMedium Loot Bonus Buff Potion ",
+	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_50": "§9Greater Loot Bonus Buff Potion ",
+	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_75": "§6Major Loot Bonus Buff Potion ",
+	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_1": "§7Minor Mana Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_10": "§aLesser Mana Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_100": "§dMiraculous Mana Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_25": "§eMedium Mana Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_50": "§9Greater Mana Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_75": "§6Major Mana Regen Buff Potion ",
+	"item.mmorpg.alchemy.instant.energy.potion_lvl_1": "§7Minor Instant Energy Potion",
+	"item.mmorpg.alchemy.instant.energy.potion_lvl_10": "§aLesser Instant Energy Potion",
+	"item.mmorpg.alchemy.instant.energy.potion_lvl_100": "§dMiraculous Instant Energy Potion",
+	"item.mmorpg.alchemy.instant.energy.potion_lvl_25": "§eMedium Instant Energy Potion",
+	"item.mmorpg.alchemy.instant.energy.potion_lvl_50": "§9Greater Instant Energy Potion",
+	"item.mmorpg.alchemy.instant.energy.potion_lvl_75": "§6Major Instant Energy Potion",
+	"item.mmorpg.alchemy.instant.health.potion_lvl_1": "§7Minor Instant Health Potion",
+	"item.mmorpg.alchemy.instant.health.potion_lvl_10": "§aLesser Instant Health Potion",
+	"item.mmorpg.alchemy.instant.health.potion_lvl_100": "§dMiraculous Instant Health Potion",
+	"item.mmorpg.alchemy.instant.health.potion_lvl_25": "§eMedium Instant Health Potion",
+	"item.mmorpg.alchemy.instant.health.potion_lvl_50": "§9Greater Instant Health Potion",
+	"item.mmorpg.alchemy.instant.health.potion_lvl_75": "§6Major Instant Health Potion",
+	"item.mmorpg.alchemy.instant.mana.potion_lvl_1": "§7Minor Instant Mana Potion",
+	"item.mmorpg.alchemy.instant.mana.potion_lvl_10": "§aLesser Instant Mana Potion",
+	"item.mmorpg.alchemy.instant.mana.potion_lvl_100": "§dMiraculous Instant Mana Potion",
+	"item.mmorpg.alchemy.instant.mana.potion_lvl_25": "§eMedium Instant Mana Potion",
+	"item.mmorpg.alchemy.instant.mana.potion_lvl_50": "§9Greater Instant Mana Potion",
+	"item.mmorpg.alchemy.instant.mana.potion_lvl_75": "§6Major Instant Mana Potion",
+	"item.mmorpg.alchemy.instant.misc.lesser_recall_potion": "§eMedium Recall Potion",
+	"item.mmorpg.alchemy.instant.misc.regret10": "§aLesser Potion of Stat Regret",
+	"item.mmorpg.alchemy.instant.misc.remove_spell": "§7 Potion of Single Spell Removal",
+	"item.mmorpg.alchemy.instant.misc.remove_talent": "§7 Potion of Single Talent Removal",
+	"item.mmorpg.alchemy.instant.misc.reset_spells": "§aLesser Potion of Reset Spells",
+	"item.mmorpg.alchemy.instant.misc.reset_talents": "§7Minor Potion of Reset Talents",
+
+"_comment": " [CATEGORY]: ALCHEMY - NAMES",
+
+
 "_comment": " [CATEGORY]: AFFIXES - NAMES",
 
 	"mmorpg.affix.arcanists": "Arcanist's",
@@ -178,60 +232,6 @@
 	"mmorpg.affix.wise": "Wise",
 
 "_comment": " [CATEGORY]: AFFIXES - NAMES",
-
-
-"_comment": " [CATEGORY]: ALCHEMY - NAMES",
-
-	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "§7Minor Energy Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_10": "§aLesser Energy Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_100": "§dMiraculous Energy Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_25": "§eMedium Energy Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_50": "§9Greater Energy Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_75": "§6Major Energy Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_1": "§7Minor Health Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_10": "§aLesser Health Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_100": "§dMiraculous Health Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_25": "§eMedium Health Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_50": "§9Greater Health Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_75": "§6Major Health Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_1": "§7Minor Loot Bonus Buff Potion ",
-	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_10": "§aLesser Loot Bonus Buff Potion ",
-	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_100": "§dMiraculous Loot Bonus Buff Potion ",
-	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_25": "§eMedium Loot Bonus Buff Potion ",
-	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_50": "§9Greater Loot Bonus Buff Potion ",
-	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_75": "§6Major Loot Bonus Buff Potion ",
-	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_1": "§7Minor Mana Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_10": "§aLesser Mana Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_100": "§dMiraculous Mana Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_25": "§eMedium Mana Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_50": "§9Greater Mana Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_75": "§6Major Mana Regen Buff Potion ",
-	"item.mmorpg.alchemy.instant.energy.potion_lvl_1": "§7Minor Instant Energy Potion",
-	"item.mmorpg.alchemy.instant.energy.potion_lvl_10": "§aLesser Instant Energy Potion",
-	"item.mmorpg.alchemy.instant.energy.potion_lvl_100": "§dMiraculous Instant Energy Potion",
-	"item.mmorpg.alchemy.instant.energy.potion_lvl_25": "§eMedium Instant Energy Potion",
-	"item.mmorpg.alchemy.instant.energy.potion_lvl_50": "§9Greater Instant Energy Potion",
-	"item.mmorpg.alchemy.instant.energy.potion_lvl_75": "§6Major Instant Energy Potion",
-	"item.mmorpg.alchemy.instant.health.potion_lvl_1": "§7Minor Instant Health Potion",
-	"item.mmorpg.alchemy.instant.health.potion_lvl_10": "§aLesser Instant Health Potion",
-	"item.mmorpg.alchemy.instant.health.potion_lvl_100": "§dMiraculous Instant Health Potion",
-	"item.mmorpg.alchemy.instant.health.potion_lvl_25": "§eMedium Instant Health Potion",
-	"item.mmorpg.alchemy.instant.health.potion_lvl_50": "§9Greater Instant Health Potion",
-	"item.mmorpg.alchemy.instant.health.potion_lvl_75": "§6Major Instant Health Potion",
-	"item.mmorpg.alchemy.instant.mana.potion_lvl_1": "§7Minor Instant Mana Potion",
-	"item.mmorpg.alchemy.instant.mana.potion_lvl_10": "§aLesser Instant Mana Potion",
-	"item.mmorpg.alchemy.instant.mana.potion_lvl_100": "§dMiraculous Instant Mana Potion",
-	"item.mmorpg.alchemy.instant.mana.potion_lvl_25": "§eMedium Instant Mana Potion",
-	"item.mmorpg.alchemy.instant.mana.potion_lvl_50": "§9Greater Instant Mana Potion",
-	"item.mmorpg.alchemy.instant.mana.potion_lvl_75": "§6Major Instant Mana Potion",
-	"item.mmorpg.alchemy.instant.misc.lesser_recall_potion": "§eMedium Recall Potion",
-	"item.mmorpg.alchemy.instant.misc.regret10": "§aLesser Potion of Stat Regret",
-	"item.mmorpg.alchemy.instant.misc.remove_spell": "§7 Potion of Single Spell Removal",
-	"item.mmorpg.alchemy.instant.misc.remove_talent": "§7 Potion of Single Talent Removal",
-	"item.mmorpg.alchemy.instant.misc.reset_spells": "§aLesser Potion of Reset Spells",
-	"item.mmorpg.alchemy.instant.misc.reset_talents": "§7Minor Potion of Reset Talents",
-
-"_comment": " [CATEGORY]: ALCHEMY - NAMES",
 
 
 "_comment": " [CATEGORY]: ITEM SETS - NAMES",
@@ -919,37 +919,6 @@
 "_comment": " [CATEGORY]: ADVANCEMENT DESCRIPTIONS - NAMES",
 
 
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-	"mmorpg.gear_type.axe": "Axe",
-	"mmorpg.gear_type.bow": "Bow",
-	"mmorpg.gear_type.bracelet": "Bracelet",
-	"mmorpg.gear_type.charm": "Charm",
-	"mmorpg.gear_type.cloth_boots": "Cloth Slippers",
-	"mmorpg.gear_type.cloth_chest": "Cloth Vest",
-	"mmorpg.gear_type.cloth_helmet": "Cloth Hat",
-	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
-	"mmorpg.gear_type.crossbow": "Crossbow",
-	"mmorpg.gear_type.hammer": "Hammer",
-	"mmorpg.gear_type.leather_boots": "Leather Boots",
-	"mmorpg.gear_type.leather_chest": "Leather Chest",
-	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
-	"mmorpg.gear_type.leather_pants": "Leather Pants",
-	"mmorpg.gear_type.necklace": "Necklace",
-	"mmorpg.gear_type.plate_boots": "Plate Boots",
-	"mmorpg.gear_type.plate_chest": "Plate Chest",
-	"mmorpg.gear_type.plate_helmet": "Plate Helm",
-	"mmorpg.gear_type.plate_pants": "Plate Greaves",
-	"mmorpg.gear_type.ring": "Ring",
-	"mmorpg.gear_type.shield": "Shield",
-	"mmorpg.gear_type.staff": "Staff",
-	"mmorpg.gear_type.sword": "Sword",
-	"mmorpg.gear_type.torch": "Torch",
-	"mmorpg.gear_type.wand": "Staff",
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 	"item.mmorpg.uniques.axe.axefire0": "§eAxe of Blazing Cuts",
@@ -1043,6 +1012,89 @@
 	"item.mmorpg.uniques.sword.water_ele_saber0": "§eSaber of Frost madness",
 
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
+
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+	"mmorpg.gear_type.axe": "Axe",
+	"mmorpg.gear_type.bow": "Bow",
+	"mmorpg.gear_type.bracelet": "Bracelet",
+	"mmorpg.gear_type.charm": "Charm",
+	"mmorpg.gear_type.cloth_boots": "Cloth Slippers",
+	"mmorpg.gear_type.cloth_chest": "Cloth Vest",
+	"mmorpg.gear_type.cloth_helmet": "Cloth Hat",
+	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
+	"mmorpg.gear_type.crossbow": "Crossbow",
+	"mmorpg.gear_type.hammer": "Hammer",
+	"mmorpg.gear_type.leather_boots": "Leather Boots",
+	"mmorpg.gear_type.leather_chest": "Leather Chest",
+	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
+	"mmorpg.gear_type.leather_pants": "Leather Pants",
+	"mmorpg.gear_type.necklace": "Necklace",
+	"mmorpg.gear_type.plate_boots": "Plate Boots",
+	"mmorpg.gear_type.plate_chest": "Plate Chest",
+	"mmorpg.gear_type.plate_helmet": "Plate Helm",
+	"mmorpg.gear_type.plate_pants": "Plate Greaves",
+	"mmorpg.gear_type.ring": "Ring",
+	"mmorpg.gear_type.shield": "Shield",
+	"mmorpg.gear_type.staff": "Staff",
+	"mmorpg.gear_type.sword": "Sword",
+	"mmorpg.gear_type.torch": "Torch",
+	"mmorpg.gear_type.wand": "Staff",
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+
+"_comment": " [CATEGORY]: POTIONS - NAMES",
+
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.blazing_inferno": "Blazing Inferno",
+	"effect.mmorpg.bleed": "Bleed",
+	"effect.mmorpg.burn": "Burn",
+	"effect.mmorpg.cleanse_poison": "Cleanse Poison",
+	"effect.mmorpg.divine_shield": "Divine Shield",
+	"effect.mmorpg.frost": "Frost",
+	"effect.mmorpg.frost_essence": "Frost Essence",
+	"effect.mmorpg.hunter_instinct": "Hunter Instinct",
+	"effect.mmorpg.imbue": "Imbue",
+	"effect.mmorpg.major_thorns": "Major Thorns",
+	"effect.mmorpg.minor_thorns": "Minor Thorns",
+	"effect.mmorpg.petrify": "Petrify",
+	"effect.mmorpg.poisoned_weapons": "Poisoned Weapons",
+	"effect.mmorpg.righteous_fury": "Righteous Fury",
+	"effect.mmorpg.self_regen": "Regenerate",
+	"effect.mmorpg.shiver": "Shiver",
+	"effect.mmorpg.static": "Static",
+	"effect.mmorpg.stealth": "Stealth",
+	"effect.mmorpg.teleport_protection": "Teleport Guard",
+	"effect.mmorpg.thorn_armor": "Thorn Armor",
+	"effect.mmorpg.thunder_essence": "Thunder Essence",
+	"effect.mmorpg.wounds": "Wounds",
+
+"_comment": " [CATEGORY]: POTIONS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -1199,58 +1251,6 @@
 	"item.mmorpg.wand.wand5": "§dWand",
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
-
-
-"_comment": " [CATEGORY]: POTIONS - NAMES",
-
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.blazing_inferno": "Blazing Inferno",
-	"effect.mmorpg.bleed": "Bleed",
-	"effect.mmorpg.burn": "Burn",
-	"effect.mmorpg.cleanse_poison": "Cleanse Poison",
-	"effect.mmorpg.divine_shield": "Divine Shield",
-	"effect.mmorpg.frost": "Frost",
-	"effect.mmorpg.frost_essence": "Frost Essence",
-	"effect.mmorpg.hunter_instinct": "Hunter Instinct",
-	"effect.mmorpg.imbue": "Imbue",
-	"effect.mmorpg.major_thorns": "Major Thorns",
-	"effect.mmorpg.minor_thorns": "Minor Thorns",
-	"effect.mmorpg.petrify": "Petrify",
-	"effect.mmorpg.poisoned_weapons": "Poisoned Weapons",
-	"effect.mmorpg.righteous_fury": "Righteous Fury",
-	"effect.mmorpg.self_regen": "Regenerate",
-	"effect.mmorpg.shiver": "Shiver",
-	"effect.mmorpg.static": "Static",
-	"effect.mmorpg.stealth": "Stealth",
-	"effect.mmorpg.teleport_protection": "Teleport Guard",
-	"effect.mmorpg.thorn_armor": "Thorn Armor",
-	"effect.mmorpg.thunder_essence": "Thunder Essence",
-	"effect.mmorpg.wounds": "Wounds",
-
-"_comment": " [CATEGORY]: POTIONS - NAMES",
 
 
 "_comment": " [CATEGORY]: WORLD TYPES - NAMES",
